...
        
        let resultText = presenter.makeResultMessage()

        let result = AlertModel(
                        title: "Этот раунд окончен!",
                        text: resultText,
                        buttonText: "Сыграть ещё раз",
                        completion: {
                            self.presenter.restartGame()})

            AlertPresenter.showAlert(alertModel: result, delegate: self)
    }
    
...
